@@ -1,9 +1,7 @@
 package elkar_ekin.app.service;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -18,12 +16,14 @@ import elkar_ekin.app.repositories.NewsItemRepository;
 @Service
 public class NewsItemServiceImpl implements NewsItemService {
 
-	@Autowired
-	private NewsItemRepository newsItemRepository;
+	private final NewsItemRepository newsItemRepository;
+	private final CommentRepository commentRepository;
 
 	@Autowired
-	private CommentRepository commentRepository;
-
+	public NewsItemServiceImpl(NewsItemRepository newsItemRepository, CommentRepository commentRepository) {
+		this.newsItemRepository = newsItemRepository;
+		this.commentRepository = commentRepository;
+	}
 	@Override
 	public NewsItem save(NewsItemDto newsItemDto) {
 		NewsItem newsItem = new NewsItem(newsItemDto.getTitle(), newsItemDto.getBody(), newsItemDto.getUser());
@@ -32,34 +32,12 @@ public class NewsItemServiceImpl implements NewsItemService {
 
 	@Override
 	public List<NewsItem> getAllNewsItems() {
-        // List<NewsItem> newsItems = newsItemRepository.findAll();
-        List<NewsItem> newsItems = newsItemRepository.findAllByOrderByCreatedAtDesc();
-
-        // Si necesitas transformar los datos de alguna manera, puedes hacerlo aquí
-        return newsItems.stream().map(item -> {
-            NewsItem newsItem = new NewsItem();
-            newsItem.setNewsItemID(item.getNewsItemID());
-            newsItem.setTitle(item.getTitle());
-            newsItem.setBody(item.getBody());
-            return newsItem;
-        }).collect(Collectors.toList());
+        return newsItemRepository.findAllByOrderByCreatedAtDesc();
     }
 
 	@Override
 	public List<NewsItem> getLastFiveNewsItems() {
-        // List<NewsItem> newsItems = newsItemRepository.findAll();
-        List<NewsItem> newsItems = newsItemRepository.findAllByOrderByCreatedAtDesc();
-
-        // Si necesitas transformar los datos de alguna manera, puedes hacerlo aquí
-		return newsItems.stream()
-        .limit(5) // Limitar a los primeros cinco elementos
-        .map(item -> {
-            NewsItem newsItem = new NewsItem();
-            newsItem.setNewsItemID(item.getNewsItemID());
-            newsItem.setTitle(item.getTitle());
-            newsItem.setBody(item.getBody());
-            return newsItem;
-        }).collect(Collectors.toList());
+        return newsItemRepository.findAllByOrderByCreatedAtDesc().stream().limit(5).toList();
     }
 
     @Override
@@ -113,21 +91,7 @@ public class NewsItemServiceImpl implements NewsItemService {
         return newsItemRepository.findByTitleContainingIgnoreCaseOrBodyContainingIgnoreCase(keyword, keyword);
     }
 
-	// @Override
-	// public boolean addComment(CommentDto commentRequest) {
-		
-	// }
 
-    // @Override
-	// public String editNewsItem(NewsItemDto newsItemDto) {
-	// 	Optional<NewsItem> userData = newsItemRepository.findById((Long) httpSession.getAttribute(AppUtils.USER_ID));
-
-	// 	NewsItem newsItem = new NewsItem();
-	// 	newsItem.setTitle(newsItemDto.getTitle());
-	// 	newsItem.setBody(newsItemDto.getBody());
-	// 	newsItemRepository.save(newsItem);
-	// 	return AppUtils.POST_ADDED_SUCCESS;
-	// }
 	
 
 }
